--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
 				<p>Free software, freedom-respecting software, software libre, or libre software is computer software distributed under terms that allow users to run the software for any purpose as well as to study, change, and distribute the software and any adapted versions. The right to study and modify software entails access to its source code</p>
 		</div>
 	</section>
-	<div class="hammy">
-
-	</div>
+		<button class="c-hamburger c-hamburger--htx">
+  				<span>toggle menu</span>
+		</button>
+		<div class="links">	
+				<div><a class="plink" href="#">Events Glug</a></div>
+				<div><a class="plink" href="#">Join Glug</a></div>
+		</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> 
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
