--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 	</header>
 	<section>
 		<div class="container">
-			<h6>GLUG</h6>
-			<h1>RNSIT CHAPTER</h1>
-			<h2>#FOSSilized</h2>
+			<h5>#FOSSilized</h5>
+			<h1 class="desk">Free Software Movement Karnataka</h1>
+			<h1 class="mob">FSMK</h1>
+			<h2><i>"Information is power. But like all power, there are those who want to keep it for themselves" - Aaron Swartz</i></h2>
 		</div>
 		<div class="introTextContain">
 		<h3>What is GLUG?</h3>
