--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>GLUG RNSIT</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,10 +19,10 @@
 	</header>
 	<section>
 		<div class="container">
-			<h5>#FOSSilized</h5>
-			<h1 class="desk">Free Software Movement Karnataka</h1>
-			<h1 class="mob">FSMK</h1>
-			<h2><i>"Information is power. But like all power, there are those who want to keep it for themselves" - Aaron Swartz</i></h2>
+			<h5 class="cont-head ">#FOSSilized</h5>
+			<h1 class="cont-head desk">Free Software Movement Karnataka</h1>
+			<h1 class="cont-head mob">FSMK</h1>
+			<h2 class="cont-head"><i>"Information is power. But like all power, there are those who want to keep it for themselves" - Aaron Swartz</i></h2>
 		</div>
 		<div class="introTextContain">
 		<h3>What is GLUG?</h3>
