--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 				<div><a class="plink" href="#">Events Glug</a></div>
 				<div><a class="plink" href="#">Join Glug</a></div>
 		</div>
+		<footer>
+			<div class="footer">
+				<span>Developed by Glug Rns Members</span>
+				<a href="http://sanair96.github.io/glugrns" class="foot-link">Fork Me!</a>
+			</div>
+		</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> 
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
