--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 				<div><a class="plink" href="#">Events Glug</a></div>
 				<div><a class="plink" href="#">Join Glug</a></div>
 		</div>
+		<br>
 		<footer>
 			<div class="footer">
-				<span>Developed by Glug Rns Members</span>
+				<span>Developed by <a class="gitlink">Sandeep A Nair</a></span>
 				<a href="http://sanair96.github.io/glugrns" class="foot-link">Fork Me!</a>
 			</div>
 		</footer>
